// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BaseInput rendering removes input 1`] = `
<div class="base-input">
  <!---->
  <select class="select-type">
    <option value="string">string</option>
    <option value="number">number</option>
    <option value="boolean">boolean</option>
    <option value="array">array</option>
    <option value="object">object</option>
  </select>
</div>
`;

exports[`BaseInput rendering removes type selector 1`] = `
<div class="base-input">
  <inputstring-stub value="foo"></inputstring-stub>
  <!---->
</div>
`;

exports[`BaseInput supported types array 1`] = `
<div class="base-input">
  <inputarray-stub value="foo,42,true"></inputarray-stub>
  <select class="select-type">
    <option value="string">string</option>
    <option value="number">number</option>
    <option value="boolean">boolean</option>
    <option value="array">array</option>
    <option value="object">object</option>
  </select>
</div>
`;

exports[`BaseInput supported types boolean 1`] = `
<div class="base-input">
  <inputboolean-stub value="true"></inputboolean-stub>
  <select class="select-type">
    <option value="string">string</option>
    <option value="number">number</option>
    <option value="boolean">boolean</option>
    <option value="array">array</option>
    <option value="object">object</option>
  </select>
</div>
`;

exports[`BaseInput supported types number 1`] = `
<div class="base-input">
  <inputnumber-stub value="123"></inputnumber-stub>
  <select class="select-type">
    <option value="string">string</option>
    <option value="number">number</option>
    <option value="boolean">boolean</option>
    <option value="array">array</option>
    <option value="object">object</option>
  </select>
</div>
`;

exports[`BaseInput supported types object 1`] = `
<div class="base-input">
  <inputobject-stub value="[object Object]"></inputobject-stub>
  <select class="select-type">
    <option value="string">string</option>
    <option value="number">number</option>
    <option value="boolean">boolean</option>
    <option value="array">array</option>
    <option value="object">object</option>
  </select>
</div>
`;

exports[`BaseInput supported types string 1`] = `
<div class="base-input">
  <inputstring-stub value="string value"></inputstring-stub>
  <select class="select-type">
    <option value="string">string</option>
    <option value="number">number</option>
    <option value="boolean">boolean</option>
    <option value="array">array</option>
    <option value="object">object</option>
  </select>
</div>
`;
